--- a/rebar.config
+++ b/rebar.config
@@ -2,3 +2,6 @@
 {erl_opts, [debug_info]}.
 {clean_files, ["ebin/*.beam"]}.
 {xref_checks, [exports_not_used, undefined_function_calls]}.
+{deps, [
+  {proper, "1.0", {git,"https://github.com/manopapad/proper.git", "master"}}
+]}.
