Brought the basho bench driver up to date.

--- a/priv/basho_bench_locker.config
+++ b/priv/basho_bench_locker.config
@@ -1,5 +1,5 @@
-%{mode, max}.
-{mode, {rate, 1000}}.
+{mode, max}.
+%{mode, {rate, 100}}.
 
 {duration, 15}.
 
@@ -9,10 +9,13 @@
 
 {code_paths, ["../locker/ebin"]}.
 
-{operations, [{set,1}, {get, 4}]}.
+{operations, [{get, 9}, {set,1}]}.
 
-{key_generator, {partitioned_sequential_int, 5000000}}.
+{key_generator, {partitioned_sequential_int, 100000000}}.
 
 {value_generator, {fixed_bin, 1}}.
 
-{setup_completed, false}.
+{masters, [{'localhost', 'a'}, {'localhost', 'b'}, {'localhost', 'c'}]}.
+{w, 2}.
+{replicas, [{'localhost', 'r1'}, {'localhost', 'r2'}, {'localhost', 'r3'}]}.
+{start_nodes, true}.
