Updated rebar to use short names when running common test. Tests now passing on R16B01

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,10 @@
 {lib_dirs, ["deps"]}.
 {erl_opts, [debug_info]}.
 {clean_files, ["ebin/*.beam"]}.
+
 {xref_checks, [exports_not_used, undefined_function_calls]}.
 {deps, [
   {proper, "1.0", {git,"https://github.com/manopapad/proper.git", "master"}}
 ]}.
+
+{ct_use_short_names, true}.
