--- a/rebar.config
+++ b/rebar.config
@@ -3,8 +3,6 @@
 {clean_files, ["ebin/*.beam"]}.
 
 {xref_checks, [exports_not_used, undefined_function_calls]}.
-{deps, [
-  {proper, "", {git,"git@github.com:garret-smith/proper.git"}}
-]}.
+{deps, []}.
 
 {ct_use_short_names, true}.
