Use real proper

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 
 {xref_checks, [exports_not_used, undefined_function_calls]}.
 {deps, [
-  {proper, "", {git,"git@github.com:garret-smith/proper.git"}}
+  {proper, "", {git,"git@github.com:manopapad/proper.git"}}
 ]}.
 
 {ct_use_short_names, true}.
